apps/base/lessons-in-progress/admin-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-backend
  namespace: lessons-in-progress
  labels:
    app: admin-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-backend
  template:
    metadata:
      labels:
        app: admin-backend
    spec:
      containers:
        - name: admin-backend
          image: ianrn/microservice-blog-admin-backend:latest
          ports:
            - containerPort: 80
