apps/base/lessons-in-progress/posts-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-service
  namespace: lessons-in-progress
  labels:
    app: posts-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-service
  template:
    metadata:
      labels:
        app: posts-service
    spec:
      containers:
        - name: php-fpm
          image: ianrn/microservice-blog-posts-service:latest
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: posts-storage
              mountPath: /var/www/html/storage

        - name: nginx
          image: nginx:stable-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: posts-storage
              mountPath: /var/www/html/storage
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf

      volumes:
        - name: posts-storage
          emptyDir: {}
        - name: nginx-config
          configMap:
            name: posts-nginx-config
