apps/base/lessons-in-progress/admin-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-backend
  namespace: lessons-in-progress
  labels:
    app: admin-backend
spec:
  type: ClusterIP
  selector:
    app: admin-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
