apps/base/lessons-in-progress/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: lessons-in-progress
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
