apps/base/lessons-in-progress/posts-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-service
  namespace: lessons-in-progress
  labels:
    app: posts-service
spec:
  type: ClusterIP
  selector:
    app: posts-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
