apps/base/lessons-in-progress/admin-backend-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: admin-backend-ingress
  namespace: lessons-in-progress
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`blog.local`) && PathPrefix(`/admin`)
      kind: Rule
      services:
        - name: admin-backend
          port: 80
