apps/base/lessons-in-progress/frontend-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-ingress
  namespace: lessons-in-progress
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`blog.local`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: frontend
          port: 80
