apps/base/lessons-in-progress/posts-service-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: posts-service-ingress
  namespace: lessons-in-progress
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`blog.local`) && PathPrefix(`/posts`)
      kind: Rule
      services:
        - name: posts-service
          port: 80
